Add recipe links to index and links back to index

--- a/recipes/beef-birria-tacos.html
+++ b/recipes/beef-birria-tacos.html
@@ -69,5 +69,7 @@
         <li>Serve with extra sauce on the side for dipping.</li>
     </ol>
 
+    <h5><a href="../index.html">View other recipes</a></h5>
+
 </body>
 </html>
