--- a/recipes/pistachio-crusted-salmon.html
+++ b/recipes/pistachio-crusted-salmon.html
@@ -38,5 +38,7 @@
         <li>Bake in the preheated oven until salmon flakes easily with a fork, 10 to 12 minutes. Serve with lemon wedges.</li>
     </ol>
 
+    <h5><a href="../index.html">View other recipes</a></h5>
+
 </body>
 </html>
