--- a/recipes/tabbouleh.html
+++ b/recipes/tabbouleh.html
@@ -31,6 +31,8 @@
         <li>Place bulgur in a small mixing bowl. Add boiling water, mix, and cover with a clean towel. Let stand for 1 hour. Drain any excess water.</li>
         <li>Combine tomatoes, onion, parsley, mint, lemon juice, olive oil, and salt. Add bulgur; mix well and serve.</li>
     </ol>
+
+    <h5><a href="../index.html">View other recipes</a></h5>
     
 </body>
 </html>
