--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/pistachio-crusted-salmon.html">Pistachio-Crusted Salmon</a></li>
-        <li><a href="./recipes/beef-birria-tacos.html"></a>Beef Birria Tacos</li>
+        <li><a href="./recipes/beef-birria-tacos.html">Beef Birria Tacos</a></li>
         <li><a href="./recipes/tabbouleh.html">Tabbouleh</a></li>
     </ul>
 </body>
