Add base css styles

--- a/recipes/pistachio-crusted-salmon.html
+++ b/recipes/pistachio-crusted-salmon.html
@@ -3,42 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Pistachio-Crusted Salmon</title>
 </head>
 <body>
     <h1>Pistachio-Crusted Salmon</h1>
 
     <img src="../images/pistachio-crusted-salmon.webp" alt="Pistachio Crusted Salmon" width="800" height="600">
+    
+    <div class="subheading">
+        <h3>Elevate Your Salmon: Quick and Delicious Pistachio-Crusted Recipe</h3>
+        <h5><a href="https://www.allrecipes.com/recipe/269394/pistachio-crusted-salmon/">Submitted by <b>France C</b>  <i>Updated on November 29, 2023</i></a></h5>
+    </div>
 
-    <h3>Elevate Your Salmon: Quick and Delicious Pistachio-Crusted Recipe</h3>
-    <h5><a href="https://www.allrecipes.com/recipe/269394/pistachio-crusted-salmon/">Submitted by <b>France C</b>  <i>Updated on November 29, 2023</i></a></h5>
-    <p>Transform your ordinary salmon into an extraordinary dish with this pistachio-crusted salmon recipe. The flavorful crust elevates the salmon, making it perfect for both a quick weeknight meal and an elegant dinner party. With a preparation time of under 30 minutes, this dish is as convenient as it is delicious.</p>
-    <p>For a perfect pairing, serve this pistachio-crusted salmon with a chilled glass of Sauvignon Blanc. The crispness of the wine complements the rich, nutty flavors of the salmon, creating a delightful dining experience. Whether you're cooking for family or entertaining guests, this recipe is sure to impress.</p>
+    <div class="summary">
+        <p>Transform your ordinary salmon into an extraordinary dish with this pistachio-crusted salmon recipe. The flavorful crust elevates the salmon, making it perfect for both a quick weeknight meal and an elegant dinner party. With a preparation time of under 30 minutes, this dish is as convenient as it is delicious.</p>
+        <p>For a perfect pairing, serve this pistachio-crusted salmon with a chilled glass of Sauvignon Blanc. The crispness of the wine complements the rich, nutty flavors of the salmon, creating a delightful dining experience. Whether you're cooking for family or entertaining guests, this recipe is sure to impress.</p>
+    </div>
 
+    <div class="ingredients">
     <h3>Ingredients</h3>
-    <ul>
-        <li>1/4 cup crushed pistachios</li>
-        <li>2 tablespoons panko bread crumbs</li>
-        <li>1 tablespoon grated Parmesan cheese</li>
-        <li>1 tablespoon butter, melted</li>
-        <li>4 (6 ounce) fillets salmon with skin, center cut</li>
-        <li>salt and ground black pepper to taste</li>
-        <li>2 tablespoons olive oil</li>
-        <li>1 tablespoon Dijon mustard</li>
-        <li>4 lemon wedges</li>
-    </ul>
+        <ul>
+            <li>1/4 cup crushed pistachios</li>
+            <li>2 tablespoons panko bread crumbs</li>
+            <li>1 tablespoon grated Parmesan cheese</li>
+            <li>1 tablespoon butter, melted</li>
+            <li>4 (6 ounce) fillets salmon with skin, center cut</li>
+            <li>salt and ground black pepper to taste</li>
+            <li>2 tablespoons olive oil</li>
+            <li>1 tablespoon Dijon mustard</li>
+            <li>4 lemon wedges</li>
+        </ul>
+    </div>
 
+    <div class="directions">
     <h3>Directions</h3>
-    <ol>
-        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-        <li>Combine pistachios, bread crumbs, Parmesan cheese, and butter in a small bowl; stir with a fork until evenly combined.</li>
-        <li>Lightly season salmon fillets with salt and pepper on both sides.</li>
-        <li>Heat olive oil in a large oven-safe skillet over medium heat. Sear salmon fillets, flesh-side down, for 2 to 3 minutes. Turn heat off and flip salmon pieces over so skin side is down.</li>
-        <li>Brush tops of salmon evenly with Dijon mustard. Top with pistachio mixture, pressing mixture down onto salmon.</li>
-        <li>Bake in the preheated oven until salmon flakes easily with a fork, 10 to 12 minutes. Serve with lemon wedges.</li>
-    </ol>
+        <ol>
+            <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+            <li>Combine pistachios, bread crumbs, Parmesan cheese, and butter in a small bowl; stir with a fork until evenly combined.</li>
+            <li>Lightly season salmon fillets with salt and pepper on both sides.</li>
+            <li>Heat olive oil in a large oven-safe skillet over medium heat. Sear salmon fillets, flesh-side down, for 2 to 3 minutes. Turn heat off and flip salmon pieces over so skin side is down.</li>
+            <li>Brush tops of salmon evenly with Dijon mustard. Top with pistachio mixture, pressing mixture down onto salmon.</li>
+            <li>Bake in the preheated oven until salmon flakes easily with a fork, 10 to 12 minutes. Serve with lemon wedges.</li>
+        </ol>
+    </div>
 
-    <h5><a href="../index.html">View other recipes</a></h5>
+    <h5 class="back"><a href="../index.html">View other recipes</a></h5>
 
 </body>
 </html>
