--- a/recipes/tabbouleh.html
+++ b/recipes/tabbouleh.html
@@ -3,36 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Tabbouleh</title>
 </head>
 <body>
     <h1>Tabbouleh</h1>
     <img src="../images/tabbouleh.webp" alt="Tabbouleh" width="800" height="600">
 
-    <h3>Authentic Tabbouleh: A Refreshing Middle Eastern Salad</h3>
-    <h5><a href="https://www.allrecipes.com/recipe/16135/tabbouleh-ii/">Submitted by <b>Nadine</b>  <i>Updated on June 21, 2023</i></a></h5>
-    <p>Discover the authentic taste of Middle Eastern cuisine with this genuine tabbouleh recipe. This refreshing and flavorful salad is made with bulgur wheat, tomatoes, onions, herbs, lemon juice, and olive oil, creating a perfect balance of textures and flavors. It's a versatile dish that is both nutritious and delicious.</p>
-    <p>Ideal for any occasion, this tabbouleh recipe is easy to prepare ahead of time, making it a crowd-pleasing choice for gatherings. Serve it as a light and healthy side dish or enjoy it on its own for a satisfying meal. With its vibrant ingredients and zesty dressing, this tabbouleh is sure to impress your guests.</p>
+    <div class="subheading">
+        <h3>Authentic Tabbouleh: A Refreshing Middle Eastern Salad</h3>
+        <h5><a href="https://www.allrecipes.com/recipe/16135/tabbouleh-ii/">Submitted by <b>Nadine</b>  <i>Updated on June 21, 2023</i></a></h5>
+    </div>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1/2 cup bulgar</li>
-        <li>1/2 cup boiling water</li>
-        <li>5 ripe tomatoes, finely diced</li>
-        <li>1 small onion, finely diced</li>
-        <li>1/4 cup freshly chopped mint leaves</li>
-        <li>1 lemon, juiced</li>
-        <li>2 teaspoons olive oil</li>
-        <li>salt (to taste)</li>
-    </ul>
+    <div class="summary">
+        <p>Discover the authentic taste of Middle Eastern cuisine with this genuine tabbouleh recipe. This refreshing and flavorful salad is made with bulgur wheat, tomatoes, onions, herbs, lemon juice, and olive oil, creating a perfect balance of textures and flavors. It's a versatile dish that is both nutritious and delicious.</p>
+        <p>Ideal for any occasion, this tabbouleh recipe is easy to prepare ahead of time, making it a crowd-pleasing choice for gatherings. Serve it as a light and healthy side dish or enjoy it on its own for a satisfying meal. With its vibrant ingredients and zesty dressing, this tabbouleh is sure to impress your guests.</p>
+    </div>
 
-    <h3>Directions</h3>
-    <ol>
-        <li>Place bulgur in a small mixing bowl. Add boiling water, mix, and cover with a clean towel. Let stand for 1 hour. Drain any excess water.</li>
-        <li>Combine tomatoes, onion, parsley, mint, lemon juice, olive oil, and salt. Add bulgur; mix well and serve.</li>
-    </ol>
+    <div class="ingredients">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1/2 cup bulgar</li>
+            <li>1/2 cup boiling water</li>
+            <li>5 ripe tomatoes, finely diced</li>
+            <li>1 small onion, finely diced</li>
+            <li>1/4 cup freshly chopped mint leaves</li>
+            <li>1 lemon, juiced</li>
+            <li>2 teaspoons olive oil</li>
+            <li>salt (to taste)</li>
+        </ul>
+    </div>
 
-    <h5><a href="../index.html">View other recipes</a></h5>
+    <div class="directions">
+        <h3>Directions</h3>
+        <ol>
+            <li>Place bulgur in a small mixing bowl. Add boiling water, mix, and cover with a clean towel. Let stand for 1 hour. Drain any excess water.</li>
+            <li>Combine tomatoes, onion, parsley, mint, lemon juice, olive oil, and salt. Add bulgur; mix well and serve.</li>
+        </ol>
+    </div>
+
+    <h5 class="back"><a href="../index.html">View other recipes</a></h5>
     
 </body>
 </html>
