--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipes">
         <li><a href="./recipes/pistachio-crusted-salmon.html">Pistachio-Crusted Salmon</a></li>
         <li><a href="./recipes/beef-birria-tacos.html">Beef Birria Tacos</a></li>
         <li><a href="./recipes/tabbouleh.html">Tabbouleh</a></li>
