--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Odin Recipes</title>
 </head>
-<body>
+<body id="homepage">
     <h1>Odin Recipes</h1>
-    <ul class="recipes">
-        <li><a href="./recipes/pistachio-crusted-salmon.html">Pistachio-Crusted Salmon</a></li>
-        <li><a href="./recipes/beef-birria-tacos.html">Beef Birria Tacos</a></li>
-        <li><a href="./recipes/tabbouleh.html">Tabbouleh</a></li>
-    </ul>
+    <hr class="seperator">
+    <div class="recipe-section">
+        <ul class="recipes">
+            <li><a href="./recipes/pistachio-crusted-salmon.html">Pistachio-Crusted Salmon</a></li>
+            <li><a href="./recipes/beef-birria-tacos.html">Beef Birria Tacos</a></li>
+            <li><a href="./recipes/tabbouleh.html">Tabbouleh</a></li>
+        </ul>
+    </div>
 </body>
 </html>
